// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs by run, experiment, and type all at once 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular experiment 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular experiment 2`] = `
[
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular run 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs from a particular run 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs of a particular type 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should be able to filter logs of a particular type 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should ignore missing logs 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 11,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 22,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 33,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 44,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return logs added after resuming 1`] = `
[
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 2,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return logs overwriting other logs after resuming 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 1,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 2,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return the logs in order of experimentName, runName, and ascending number 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 2) > should return the logs in order of experimentName, runName, and ascending number 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs by run, experiment, and type all at once 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular experiment 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular experiment 2`] = `
[
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular run 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs from a particular run 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs of a particular type 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should be able to filter logs of a particular type 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should ignore missing logs 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 11,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 22,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 33,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 44,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return logs added after resuming 1`] = `
[
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 2,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return logs overwriting other logs after resuming 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 1,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "overwriting",
    "values": {
      "x": 2,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return the logs in order of experimentName, runName, and ascending number 1`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;

exports[`SQLiteStore#getLogs (selectQueryLimit: 10000) > should return the logs in order of experimentName, runName, and ascending number 2`] = `
[
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "hello",
      "recipient": "Anna",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "msg": "bonjour",
      "recipient": "Jo",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 3,
    "runId": "1",
    "runName": "run1",
    "runStatus": "running",
    "type": "log3",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 1,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log1",
    "values": {
      "bar": null,
      "message": "hola",
    },
  },
  {
    "experimentId": "1",
    "experimentName": "experiment-1",
    "number": 2,
    "runId": "2",
    "runName": "run2",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": false,
      "x": 12,
    },
  },
  {
    "experimentId": "2",
    "experimentName": "experiment-2",
    "number": 1,
    "runId": "3",
    "runName": "run1",
    "runStatus": "running",
    "type": "log2",
    "values": {
      "foo": true,
      "x": 25,
      "y": 0,
    },
  },
]
`;
